--- a/hobby.html
+++ b/hobby.html
@@ -172,7 +172,8 @@ pre code {
 <div id="首先定義正事吃喝拉撒和學習以及現實中進行人與人ㄉ連結社交" class="section level4">
 <h4>首先定義正事：吃喝拉撒和學習，以及現實中進行<del>人與人ㄉ連結</del>社交</h4>
 <blockquote>
-<h5 id="以上事件之外都在進行空虛的網路衝浪活動以及玩單機遊戲">以上事件之外都在進行空虛的網路衝浪活動以及玩單機遊戲</h5>
+<h5 id="以上事件之外都在進行空虛的網路衝浪和單機遊戲以及各種長時間盯著螢幕ㄉ活動">以上事件之外都在進行空虛的網路衝浪和單機遊戲以及各種長時間盯著螢幕ㄉ活動</h5>
+<h5 id="我大概會是年紀輕輕就得白內障ㄉ人之一">我大概會是年紀輕輕就得白內障ㄉ人之一</h5>
 </blockquote>
 </div>
 <div id="使用網路看什麼" class="section level4">
@@ -184,24 +185,53 @@ pre code {
 <blockquote>
 <p>好吃ㄉ</p>
 </blockquote>
+<ul>
+<li><p><a href="https://www.youtube.com/channel/UCODOevQkFCpcTYD9ezP22ug">克里斯餐桌</a>：擁有高品質剪輯的料理頻道，而且教學鉅細靡遺，推薦給喜歡料理ㄉ人和對影片剪輯手法有興趣（？）ㄉ人！</p></li>
+<li><p><a href="https://www.youtube.com/channel/UCOm60lRWSida-cC4PrMcnyQ">菓子君Argyi</a>：製作和菓子的頻道，影片氛圍十分療癒，</p></li>
+<li><p><a href="https://www.youtube.com/channel/UCGyt5axcq_yeBojI0o6Fhlg">リロ氏のひとり遊びちゃんねる</a>：定位很神奇ㄉVtuber，我訂閱ㄌ半年多才發現他原來不是料理頻道´･ᴗ･`</p></li>
+</ul>
 <blockquote>
-<p><a href="https://www.youtube.com/channel/UCODOevQkFCpcTYD9ezP22ug">克里斯餐桌</a>：擁有高品質剪輯的料理頻道，而且教學鉅細靡遺，推薦給喜歡料理ㄉ人和對影片剪輯手法有興趣（？）ㄉ人！</p>
-<p><a href="https://www.youtube.com/channel/UCOm60lRWSida-cC4PrMcnyQ">菓子君Argyi</a>：製作和菓子的頻道，影片氛圍十分療癒，</p>
-<p><a href="https://www.youtube.com/channel/UCGyt5axcq_yeBojI0o6Fhlg">リロ氏のひとり遊びちゃんねる</a>：定位很神奇ㄉVtuber，我訂閱ㄌ半年多才發現他原來不是料理頻道´･ᴗ･`</p>
+<p>好玩ㄉ</p>
 </blockquote>
+<ul>
+<li></li>
+</ul>
+<blockquote>
+<p>好聽ㄉ</p>
+</blockquote>
+<ul>
+<li></li>
+</ul>
+</blockquote>
+<blockquote>
+<h5 id="netflix"><strong>Netflix</strong></h5>
+<p>動畫、歐美影集、紀錄片、電影，什麼都看，隨意打發時間</p>
 </blockquote>
 </div>
 </div>
 <div id="不用網路做什麼" class="section level4">
 <h4><em>不用網路做什麼？</em></h4>
-<div id="在此向各位推薦我不知道幹什麼又沒網路時喜歡做ㄉ事" class="section level5">
-<h5>在此向各位推薦我不知道幹什麼又沒網路時喜歡做ㄉ事</h5>
+<div id="在此分享我不知道幹什麼又沒網路時喜歡做ㄉ事" class="section level5">
+<h5>在此分享我不知道幹什麼又沒網路時喜歡做ㄉ事</h5>
 <blockquote>
 <h5 id="單機遊戲"><strong>單機遊戲</strong></h5>
-<blockquote>
-<p><a href="https://www.minecraft.net/">Minecraft</a>：自由度很高ㄉ沙盒遊戲，藉由破壞方塊和放置方塊進行遊戲。</p>
-<p>接龍：就是那ㄍ普通ㄉ系統內建遊戲。</p>
+<ul>
+<li><p><a href="https://www.minecraft.net/">Minecraft</a>：自由度很高ㄉ沙盒遊戲，藉由破壞方塊和放置方塊進行遊戲。</p></li>
+<li><p>接龍：就是那ㄍ普通ㄉ系統內建遊戲。</p></li>
+</ul>
 </blockquote>
+<blockquote>
+<h5 id="電影"><strong>電影</strong></h5>
+<p>沒事就去電影院湊湊熱鬧 也許以後會新增更多內容</p>
+<ul>
+<li><a href="https://promare-movie.com/">普羅米亞</a>：曾經無法控制心中ㄉ澎湃之情，去電影院七刷這部作品，現在想想覺得真是有夠瘋。BTW我連DVD都買ㄌ（錢沒有不見，只是變成喜歡ㄉ形狀）</li>
+<li></li>
+<li></li>
+</ul>
+</blockquote>
+<blockquote>
+<h5 id="畫圖"><strong>畫圖</strong></h5>
+<p>暫不公開 &gt;有緣就會見面</p>
 </blockquote>
 </div>
 </div>
