--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@ pre code {
 <blockquote>
 <p>嗨！我淳宇啦，叫我阿蠢就好！<br />
 以大學生來說略老略老，但起碼心理學是門有趣的學科。<br />
-背棄航太系ㄉ背骨仔，在航太系混了兩年半的收穫大概是曾經修過的課現在能無痛抵免：D。</p>
+背棄航太系ㄉ背骨仔，在航太系混了兩年半的收穫大概是曾經修過的課現在能無痛抵免：D。<br />
+如果泥想認識窩，也許下面ㄉ頁面殼以幫助泥⊙▽⊙</p>
 </blockquote>
 <hr />
 </div>
@@ -186,6 +187,26 @@ pre code {
 <h3><strong>蛤？你問我喜歡蛇摸？</strong></h3>
 <div id="我想一下ㄟ" class="section level4">
 <h4><a href="hobby.html">我想一下ㄟ</a></h4>
+<hr />
+</div>
+</div>
+<div id="想知道要怎麼找到我" class="section level3">
+<h3><strong>想知道要怎麼找到我？</strong></h3>
+<div id="你應該去這裡" class="section level4">
+<h4><a href="https://github.com/ChunYu-Hsieh">你應該去這裡</a></h4>
+</div>
+<div id="或這裡" class="section level4">
+<h4><a href="https://moodle.ncku.edu.tw/user/profile.php?id=185931">或這裡</a></h4>
+<hr />
+</div>
+</div>
+<div id="常用網站" class="section level3">
+<h3><strong>常用網站</strong></h3>
+<div id="成大首頁" class="section level4">
+<h4><a href="https://web.ncku.edu.tw/index.php?Lang=zh-tw">成大首頁</a></h4>
+</div>
+<div id="選課系統" class="section level4">
+<h4><a href="https://course.ncku.edu.tw/index.php?c=portal">選課系統</a></h4>
 </div>
 </div>
 </div>
